# nanopc-t4

./: .gitignore  CMakeLists.txt  README.md
include/: OLED_Font.h  font.h  gpu_read.c  gpu_read.h  oled.c  oled.h  oled_app.c  oled_app.h  oled_font_table.h  read_dataset.c  read_dataset.h  type.h
src/: Makefile  littlemode  littlemode.c  main.c  read_dataset  readgpu  readgpu.c  show.c  socket.c  socketc.c  test  test.c  test1.c
